[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[package.metadata.bootimage]
# To automatically terminate QEMU during testing.
# iobase: specify the port
# iosize: specify the byte size of the port
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
