[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[package.metadata.bootimage]
test-args = [
  # To automatically terminate QEMU during testing.
  # iobase: specify the port
  # iosize: specify the byte size of the port
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  # send from buffer to stdio by serial port
  "-serial",
  "stdio",
  # To run CI/CD tests.
  "-display",
  "none",
]

test-success-exit-code = 33 # (0x10 << 1) | 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false


[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
linked_list_allocator = "0.9.0"
pic8259 = "0.10.2"
pc-keyboard = '0.5.0'

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
